--- a/index.html
+++ b/index.html
@@ -2,8 +2,42 @@
 <html>
     <head>
         <title>GitHub Kirish</title>
+        <style>
+            table,
+            th,
+            td {
+                border: 1px solid black;
+                border-collapse: collapse;
+            }
+            th,
+            td {
+                width: 100px;
+            }
+        </style>
     </head>
     <body>
-        <h1>GitHub ga Kirish</h1>
+        <table>
+            <tr>
+                <th rowspan="2"></th>
+                <th colspan="2"> Average </th>
+                <th rowspan="2"> Red <br> eyes</th>
+            </tr>
+            <tr>
+                <th>height</th>
+                <th>width</th>
+            </tr>
+            <tr>
+                <th>males</th>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <th>females</th>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+        </table>
     </body>
 </html>
